# Architecture-and-backend-homework_kdm

./: README.md  app.py  countsapi.py  generatepayload.py  outputslack.py  pyproject.toml  ruff_report.txt
